--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "hamburger-react": "^2.5.0",
     "next": "^13.3.1",
     "nookies": "^2.5.2",
     "primereact": "^9.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "styled-icons": "^10.47.0",
+    "swiper": "^9.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.2",
